# modern-cpp-template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
CMake/: cotire.cmake
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/test/: CMakeLists.txt
lib/test/src/: main.cpp
